fix sign in button overflowing in navbar + image carousel is not swippable anymore + fix overflow-x on page not working as intended

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -51,7 +51,7 @@
   --foreground-15-non-transparent: #38393b;
 }
 
-body {
+html, body {
   overflow-x: hidden;
 }
 
